# ASTRO

./: .gitignore  README.md  TODO.md
.devcontainer/: .gitignore  Dockerfile  base.Dockerfile  devcontainer.json  docker-compose.darwin.yml  docker-compose.linux.yml  docker-compose.windows.yml  docker-compose.yml  entrypoint.sh  init.ps1  init.sh
.devcontainer/ROS2/: Dockerfile  devcontainer.json
.devcontainer/ROS2-Windows/: Dockerfile  devcontainer.json
.devcontainer/ROS2-linux/: Dockerfile  devcontainer.json
.devcontainer/ROS2-macos/: Dockerfile  devcontainer.json
.devcontainer/typst_editor/: devcontainer.json
.github/: issue-branch.yml
.github/workflows/: build-base-image.yml  track-issues.yml
manuscripts/: diagram.mmd  style.typ
manuscripts/contract/: content.typ
manuscripts/presentation/: diagrams.typ  main.typ  plan.MD
manuscripts/proposal/: cover.typ  survey.typ
manuscripts/weekly-reports/CW/: 1.typ  2.typ  3.typ  4.typ
manuscripts/weekly-reports/team/: 3.typ  4.typ  6.typ  project_status_report_1.docx  project_status_report_template.docx  project_status_report_template.typ
presentation/: main.typ
presentations/: 1.typ  2.typ  2_script.txt  diagrams.typ  presentation_2_requirements.typ  style.typ
proposal/: contract.typ  intro.typ  lit.yaml  main.typ  style.typ
reference/: udp_hcw_discrete_txrx 2 1.cpp
reference/DLQR/: udp_roundtrip_discrete.cpp
reference/QP_MPC/: qpHCW_sim.cpp  quadprogMPC_roundtrip.cpp
reference/QP_MPC/Matrices/: Bineq.hpp
reference/QP_MPC/QP_MPC/Matrices/: Aineq.hpp  H1.hpp  QQ.hpp
src/DistributedSatelliteSim/: CMakeLists.txt  package.xml
src/DistributedSatelliteSim/include/distributed_satellite_sim/: env_node.hpp  gnc_node.hpp
src/DistributedSatelliteSim/launch/: sim.launch.py
src/DistributedSatelliteSim/src/: env_node.cpp  gnc_node.cpp
src/DistributedSatelliteSim/srv/: ActuationCmd.srv
src/DistributedSatelliteSim/test/: test_dlqr_reference_launch.py  test_env_node.cpp  test_gnc_node.cpp  test_gnc_node.hpp
src/DistributedSatelliteSim/test/data/: dlqr_reference_trajectory.csv
weekly-reports/CW/: 4.typ  5.typ  6.typ  7.typ
weekly-reports/team/: 5.typ  7.typ  8.typ  9.typ
